# eda-parse

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: __init__.py  workflow_testbench.py
benchmarks/timing_diagnosis/: README.md  __init__.py  agent.py  harness.py  run.py
benchmarks/timing_diagnosis/curation_overlays/: authority_002_003.json
benchmarks/timing_diagnosis/tasks/authority_001_ol_1371_hold_repair_setup_conflict/: prompt.md  task.json
benchmarks/timing_diagnosis/tasks/authority_001_ol_1371_hold_repair_setup_conflict/hidden_oracle/: golden.json  provenance.md
benchmarks/timing_diagnosis/tasks/authority_002_ol_958_report_clock_skew_feedback_loop/: prompt.md  task.json
benchmarks/timing_diagnosis/tasks/authority_002_ol_958_report_clock_skew_feedback_loop/hidden_oracle/: golden.json  provenance.md
benchmarks/timing_diagnosis/tasks/authority_002_ol_958_report_clock_skew_feedback_loop/input/: thread_excerpt.md
benchmarks/timing_diagnosis/tasks/authority_003_or_4833_report_metrics_bottleneck/: prompt.md  task.json
benchmarks/timing_diagnosis/tasks/authority_003_or_4833_report_metrics_bottleneck/hidden_oracle/: golden.json  provenance.md
benchmarks/timing_diagnosis/tasks/authority_003_or_4833_report_metrics_bottleneck/input/: thread_excerpt.md
benchmarks/timing_diagnosis/tasks/physics_001_overconstrained_clock/: prompt.md  task.json
benchmarks/timing_diagnosis/tasks/physics_002_missing_input_delay/: prompt.md  task.json
benchmarks/timing_diagnosis/tasks/physics_003_unconstrained_paths/: prompt.md  task.json
benchmarks/timing_diagnosis/templates/authority_case/: README.md
docs/: PLAN.md  bench-design.md  dev-log.md  golden-schema.md  testbench.md  why.md
docs/formats/: lef.md  liberty.md  sdc.md
evidence/v0_first_real_runs/: README.md
evidence/v0_first_real_runs/authority_001_ol_1371_hold_repair_setup_conflict/: answer.json  transcript.jsonl
evidence/v0_first_real_runs/authority_002_ol_958_report_clock_skew_feedback_loop/: answer.json  transcript.jsonl
evidence/v0_first_real_runs/authority_003_or_4833_report_metrics_bottleneck/: answer.json  transcript.jsonl
examples/: demo_corpus_qa.py
src/eda_parse/: __init__.py  loaders.py  testbench.py  types.py
src/eda_parse/parsers/: __init__.py  lef.py  liberty.py  sdc.py
tests/: conftest.py  test_curation_converter.py  test_lef.py  test_liberty.py  test_sdc.py  test_testbench.py  test_timing_diagnosis_agent.py  test_timing_diagnosis_harness.py  test_types.py
tests/fixtures/: README.md
tools/: convert_curation_to_golden.py
(+20 files in other folders)
