[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "eda-parse"
version = "0.2.0"
description = "Unified, LLM-friendly parsers for industry-standard EDA file formats (Liberty, LEF, DEF, VCD, SDC, SPEF)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Calibur Labs" },
]
keywords = ["eda", "liberty", "lef", "def", "vcd", "sdc", "rag", "langchain", "semiconductor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.5",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1"]
dev = [
    "pytest>=8",
    "pytest-cov>=4",
    "ruff>=0.5",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/caliburlabs/eda-parse"
Issues = "https://github.com/caliburlabs/eda-parse/issues"
Repository = "https://github.com/caliburlabs/eda-parse"

[tool.hatch.build.targets.wheel]
packages = ["src/eda_parse"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "benchmarks"]

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle + pyflakes
    "I",            # isort
    "UP",           # pyupgrade
    "B",            # bugbear
    "SIM",          # simplify
    "RUF",          # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
files = ["src/eda_parse"]

[[tool.mypy.overrides]]
module = "langchain_core.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "cmc: marks tests that require CMC EDA stack access (skipped by default)",
]
